Fixed card overflow

--- a/src/components/buttonLight/styles.module.css
+++ b/src/components/buttonLight/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     cursor: default;
     align-items: center;
-    padding: 10px 15px;
+    padding: 15px;
     border-radius: 5px;
     color: var(--dark);
 }
@@ -66,6 +66,6 @@
     cursor: pointer;
 }
 .large {
-    padding: 20px 30px;
+    padding: 20px;
     font-size: 1.1rem;
 }
